--- a/public/src/app/main/main.component.html
+++ b/public/src/app/main/main.component.html
@@ -11,25 +11,26 @@
 <body>
 <marquee behavior="scroll" direction="left" style="color:#99ccff;font-size:20px">{{scrollSentence}}</marquee>
 <div style='display:block;text-align:center'>
-  <h1 class="flow-text" style="color:white;margin-top:70px"> BROWSE, TRACK, AND CONVERT CRYPTO TRADES AND FIAT VALUES</h1>
-  <h4 class="flow-text" style="color:darkgrey;margin-top:50px">Join us and begin tracking profits on your crypto trading journey</h4>
+  <h1 class="flow-text" style="color:white;margin-top:70px;"> BROWSE, TRACK, CONVERT, AND MANAGE CRYPTO TRADES</h1>
+  <h4 class="flow-text" style="color:darkgrey;margin-top:50px">Join today and begin tracking profits on your crypto trading journey</h4>
   <div style='display:inline-block;margin-top:70px'>
-    <form action=''>
+    <form id="form1">
         <i class="fa fa-envelope" aria-hidden="true" style="color:white;"></i>
-        <input type="email" name='email' placeholder="Enter email" style='background-color:whitesmoke;border-radius:5px;text-align:center'>
-        <input type="submit" value='Join' class="btn waves-effect waves-light">
+        <p><input type="email" name='email' placeholder="Enter email" style='background-color:whitesmoke;border-radius:5px;text-align:center'></p>
     </form>
+            <button type="submit" form="form1" value="Submit" class="btn btn-floating cyan pulse "><i class="material-icons" style='font-size: 25px'>chevron_right</i></button>
+
   </div>
 </div>
-<!--<div>
-<h4 class="flow-text" >Cryptoswitch Products</h4>
-  <p class="flow-text">Cryptoswitch is diligently working on a mobile-app. Stay tuned for the appstore release this quarter!</p>
-</div>-->
-<div style="display:block;text-align:center;margin-top:100px">
-    <a href="https://www.linkedin.com/in/vladimirgrigoryan/"><i class="fa fa-linkedin-square fa-4" aria-hidden="true"></i></a>
-    <a href="https://github.com/vladgrig93"><i class="fa fa-github fa-4" aria-hidden="true"></i></a>
-  <p class="flow-text" style='font-size:14px;color:#99ccff;'>&copy; 2018 cryptoswitch: All rights reserved</p>
-</div>
+
+<footer class="page-footer" style='background-color:whitesmoke;'>
+  <div style="display:block;text-align:center;margin-top:100px">
+      <a href="https://www.linkedin.com/in/vladimirgrigoryan/"><i class="fa fa-linkedin-square fa-4" aria-hidden="true" style='font-size: 20px;padding:5px'></i></a>
+      <a href="https://github.com/vladgrig93"><i class="fa fa-github fa-4" aria-hidden="true" style='font-size: 20px;padding:5px'></i></a>
+    <p class="flow-text" style='font-size:14px;color:#39659b'>&copy; 2018 transcrypter: All rights reserved</p>
+  </div>
+</footer>
+
 </body>
 </html>
 
