--- a/public/src/app/profile/profile.component.html
+++ b/public/src/app/profile/profile.component.html
@@ -12,9 +12,16 @@
 
 <h5 class="flow-text" style="color:white;display:inline-block;padding:20px;width:720px;margin-bottom:50px;border:solid-white 2px;border-radius:5px">cryptoSwitch</h5>
 
+<div class="fixed-action-btn horizontal">
 
-<a [routerLink]="['mydash']" (click)='onHomeClick()'>{{currentUser.firstname}} {{currentUser.lastname}}</a> <a [routerLink]="['convert']" (click)='otherClick()'>Convert</a>  <a [routerLink]="['contact']"(click)='otherClick()'>Contact Us</a>
-<a href='javascript:void(0)' (click)='onSignOut()'>Sign-Out</a>
+  <a class="btn-floating btn-large waves-effect waves-light" [routerLink]="['mydash']" (click)='onHomeClick()'>{{currentUser.firstname}}</a> 
+
+<ul>
+  <li><a class="btn-floating btn-large waves-effect waves-light"[routerLink]="['convert']" (click)='otherClick()'>Convert</a> </li>
+  <li><a class="btn-floating btn-large waves-effect waves-light"[routerLink]="['contact']"(click)='otherClick()'>ContactUs</a></li>
+  <li><a class="btn-floating btn-large waves-effect waves-light"href='javascript:void(0)' (click)='onSignOut()'>SignOut</a></li>
+</ul>
+</div>
 
 <div *ngIf=" !homeClicked && !otherClicked ; else routeit">
 <app-mydash></app-mydash>
@@ -25,8 +32,5 @@
   <router-outlet></router-outlet>
 </ng-template>
 </div>
-
-
-
 </body>
 </html>
